[package]
name = "sesreg"
version = "0.1.0"
authors = ["robin <robin@ansvia.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_contrib = {version = "0.4.0", default-features = false, features = ["json"]}

# [dependencies.rocket_contrib]
# version = "0.4.0"
# default-features = false
# features = ["json"]

lazy_static = "1.2.0"

diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
